fixed hamburger spacing

--- a/src/index.css
+++ b/src/index.css
@@ -449,19 +449,6 @@ Form {
 
 /* For Smaller Screens E.g Tab */
 @media all and (max-width: 1024px) {
-  .navbar {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-  }
-
-  .container {
-    margin: 0 2rem;
-  }
-
-  .brand-img {
-    margin-left: 0.5rem;
-  }
-
   .nav-menu {
     margin-right: 0.5rem;
   }
@@ -481,20 +468,8 @@ Form {
     height: 50%;
   }
 }
+
 @media all and (max-width: 768px) {
-  .navbar {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-  }
-
-  .container {
-    margin: 0 2rem;
-  }
-
-  .brand-img {
-    margin-left: 0.5rem;
-  }
-
   .nav-menu {
     margin-right: 0.5rem;
   }
@@ -522,20 +497,15 @@ Form {
 @media all and (max-width: 700px) {
   .menu-icon-1 {
     visibility: visible;
-    padding-right: 3rem;
     cursor: pointer;
   }
   .menu-icon-2 {
     visibility: visible;
-    padding-right: 3rem;
     cursor: pointer;
     color: #ffffff !important;
   }
   .navbar {
     position: relative;
-  }
-  .brand-img {
-    margin-left: 1rem;
   }
   .brand-img img {
     font-size: 100px;
@@ -553,7 +523,7 @@ Form {
   }
   .nav-menu.active {
     background: #ffffff;
-    left: 0;
+    left: -50px;
     width: 100vw;
     opacity: 1;
     transition: all 1s ease;
@@ -572,7 +542,7 @@ Form {
   }
   .nav-menu-dark.active {
     background: #100403;
-    left: 0;
+    left: -50px;
     width: 100vw;
     opacity: 1;
     transition: all 1s ease;
@@ -622,20 +592,16 @@ Form {
 @media all and (max-width: 480px) {
   .menu-icon-1 {
     visibility: visible;
-    padding-right: 3rem;
     cursor: pointer;
+    margin: 0;
   }
   .menu-icon-2 {
     visibility: visible;
-    padding-right: 3rem;
     cursor: pointer;
     color: #ffffff !important;
   }
   .navbar {
     position: relative;
-  }
-  .brand-img {
-    margin-left: 1rem;
   }
   .brand-img img {
     font-size: 100px;
@@ -653,7 +619,7 @@ Form {
   }
   .nav-menu.active {
     background: #ffffff;
-    left: 0;
+    left: -20px;
     width: 100vw;
     opacity: 1;
     transition: all 1s ease;
@@ -672,7 +638,7 @@ Form {
   }
   .nav-menu-dark.active {
     background: #100403;
-    left: 0;
+    left: -20px;
     width: 100vw;
     opacity: 1;
     transition: all 1s ease;
@@ -879,5 +845,9 @@ Form {
   .footer-header,
   .footer-contact-header {
     font-size: 1.3rem;
+  }
+
+  .custom-container {
+    width: 90% !important;
   }
 }
